# self-driving-car

./: .gitignore  LICENSE  README.md
MATLAB/MPC_Code/: Active_Steering_Nonlinear_MPC.m  Double_Lane_Change_Maneuver_MATLAB_01.eps  Double_Lane_Change_Maneuver_MATLAB_02.eps  Plotter.m  Plotter.m~  reference_generator.m
MATLAB/Path_Generator/: Reference_Y_Position.eps  Reference_Yaw_Angle.eps  path_generator.m
MATLAB/Tire_Model/: Lateral_Forces.eps  Longitudinal_Forces.eps  tire_model.m
Presentation/: Presentation-blx.bib  Presentation.aux  Presentation.bbl  Presentation.blg  Presentation.nav  Presentation.out  Presentation.run.xml  Presentation.snm  Presentation.tex  Presentation.toc  bibfile.bib
Report/: Report.aux  Report.bbl  Report.blg  Report.tex  references.bib  tire_model.m
Report/images/: Double_Lane_Change_Maneuver_cpp_01.eps  Double_Lane_Change_Maneuver_cpp_02.eps
cpp/active_steering_mpc/: CMakeLists.txt  mLc80Pen.txt
cpp/active_steering_mpc/src/: KinematicsDynamicsCalculations.cpp  KinematicsDynamicsCalculations.h  MPC.cpp  MPC.h  ReferenceGenerator.cpp  ReferenceGenerator.h  TireCalculations.cpp  TireCalculations.h  helpers.h  main.cpp
